@@ -267,6 +267,15 @@ to a value other than its default, <code>&quot;add&quot;</code>.</b></p>
       <em>Since Ant 1.8.0</em>.</td>
     <td align="center" valign="top">No, default is false</td>
   </tr>
+  <tr>
+    <td valign="top">zip64Mode</td>
+    <td valign="top">When to use Zip64 extensions for entries.  The
+      possible values are "never", "always" and "as-needed".
+      <em>Since Ant 1.9.1</em>.
+      <br/>See also the <a href="zip.html#zip64">discussion in the
+      zip task page</a></td>
+    <td align="center" valign="top">No, default is "never"</td>
+  </tr>
 </table>
 
 <h3>Nested elements</h3>
